[gd_scene load_steps=25 format=1]

[ext_resource path="res://Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Art/spaceman.png" type="Texture" id=2]
[ext_resource path="res://Scripts/lasergun.gd" type="Script" id=3]
[ext_resource path="res://Audio/SFX/laser.wav" type="Sample" id=4]
[ext_resource path="res://Scripts/player_state_machine.gd" type="Script" id=5]
[ext_resource path="res://Scripts/steps_timer.gd" type="Script" id=6]
[ext_resource path="res://Audio/SFX/death.wav" type="Sample" id=7]
[ext_resource path="res://Audio/SFX/hurt2.wav" type="Sample" id=8]
[ext_resource path="res://Audio/SFX/jump.wav" type="Sample" id=9]
[ext_resource path="res://Audio/SFX/land.wav" type="Sample" id=10]
[ext_resource path="res://Audio/SFX/steps.wav" type="Sample" id=11]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 3.83641, 6 )

[sub_resource type="SampleLibrary" id=2]

samples/laser = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 0.7 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9 ]
}

[sub_resource type="Animation" id=5]

resource/name = "fall"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=6]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=7]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=8]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=9]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}

[sub_resource type="Animation" id=10]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=11]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=12]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}

[sub_resource type="SampleLibrary" id=13]

samples/death = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}
samples/hurt = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}
samples/jump = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}
samples/land = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}
samples/steps = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 11 )
}

[node name="player" type="KinematicBody2D" groups=[
"player",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 2 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
vframes = 4
hframes = 4
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 2 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="LaserGun" type="Node2D" parent="."]

transform/pos = Vector2( 6, 0 )
script/script = ExtResource( 3 )

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="LaserGun"]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 2 )
config/pitch_random = 0.0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="Area2D" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.216766, 1.965 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

transform/pos = Vector2( 0.216766, 1.965 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="PlayerStateMachine" type="Node" parent="."]

script/script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerStateMachine"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/dead = SubResource( 4 )
anims/fall = SubResource( 5 )
anims/hurt = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/jump = SubResource( 8 )
anims/ladder = SubResource( 9 )
anims/ladder_hold = SubResource( 10 )
anims/shoot = SubResource( 11 )
anims/walk = SubResource( 12 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="RayCast2D" type="RayCast2D" parent="."]

transform/pos = Vector2( 0, 9.06895 )
enabled = true
cast_to = Vector2( 0, 1 )
layer_mask = 1
type_mask = 15

[node name="LeftCast" type="RayCast2D" parent="."]

transform/pos = Vector2( -6, 0 )
enabled = true
cast_to = Vector2( -1, 0 )
layer_mask = 1
type_mask = 15

[node name="RightCast" type="RayCast2D" parent="."]

transform/pos = Vector2( 6, 0 )
enabled = true
cast_to = Vector2( 1, 0 )
layer_mask = 1
type_mask = 15

[node name="Steps_Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = false
script/script = ExtResource( 6 )

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="Steps_Timer"]

transform/pos = Vector2( 0.35849, 0 )
params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 2
config/samples = SubResource( 13 )
config/pitch_random = 0.0


